# SerialDriver

./: .gitignore  CMakeLists.txt  Makefile  README.md  SerialDriver.c  SerialDriver.h  SerialDriver.vpp  circular_buffer.c  circular_buffer.h  compile_commands.json  cspell.config.yaml  findings.txt  main.c  sonar-project.properties  types.h
.github/: copilot-instructions.md
.github/workflows/: build.yml  cmake-multi-platform.yml
.sonarlint/: connectedMode.json
cmake/: Coverage.cmake
demo/: demo_serial_driver.c
inc/: MODE.h  SerialDriver.h  circular_buffer.h  common_types.h
src/: CMakeLists.txt  SerialDriver.c  circular_buffer.c  main.c
tests/: CMakeLists.txt  SerialDriverTest.cpp
